--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        setProperty("archivesBaseName", "todolist")
     }
     buildTypes {
+        applicationVariants.all { variant ->
+            variant.outputs.all {
+                outputFileName = "todolist.apk"
+            }
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
